# GBSWebAPI

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: MyController.hpp  MyDTOs.hpp  UserController.hpp  UserDto.hpp
src/: MyController.cpp  SwaggerComponent.hpp
src/controller/: MyController.hpp
src/db/: TDBHandler.cpp  TDBHandler.hpp
src/dto/: DTOs.hpp
